Bug 1408693 - Add a lock to protect the sGPUCrashDataMap. r=jwwang

MozReview-Commit-ID: 7NDcoGMkKZ3